--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <h2>Mini Project: Barnsley Fern Fractal</h2>
   </hgroup>
   <article data-timings="">
-    
+    <p><img src="assets/img/Barnsley.gif" height="60%" width="60%" /></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
