--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <slide class="segue" id="slide-1" style="background:navy; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>Our Gaol Today.</h2>
+    <h2>Why R?</h2>
   </hgroup>
   <article data-timings="">
     
@@ -64,6 +64,33 @@
 </slide>
 
 <slide class="" id="slide-2" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>My Reason</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>It is cool to code something like this.</li>
+</ol>
+
+<p><img src="assets/img/terminal.gif" height="60%" width="60%" /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="segue" id="slide-3" style="background:navy; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Our Gaol Today.</h2>
+  </hgroup>
+  <article data-timings="">
+    
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-4" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Mini Project: Barnsley Fern Fractal</h2>
@@ -81,14 +108,26 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Our Gaol Today.'>
+        data-slide=1 title='Why R?'>
          1
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Mini Project: Barnsley Fern Fractal'>
+        data-slide=2 title='My Reason'>
          2
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='Our Gaol Today.'>
+         3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Mini Project: Barnsley Fern Fractal'>
+         4
       </a>
     </li>
   </ul>
