--- a/index.html
+++ b/index.html
@@ -66,20 +66,86 @@
 <slide class="" id="slide-2" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>My Reason</h2>
+    <h2>The Reasons</h2>
   </hgroup>
   <article data-timings="">
-    <ol>
-<li>It is cool to code something like this.</li>
-</ol>
+    <p><font size = '6'>
+<strong>1. It is cool to code something like this:</strong>
+</font></p>
 
-<p><img src="assets/img/terminal.gif" height="60%" width="60%" /></p>
+<p><img src="assets/img/terminal.png" height="70%" width="70%" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="segue" id="slide-3" style="background:navy; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>The Reasons</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><font size = "6">
+Coding in R looks like this:
+</font></p>
+
+<p><img src="assets/img/R_code.png" height="70%" width="70%" /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-4" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>The Reasons</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><font size = "6">
+<code>By a simple logic, R is cool.</code>
+</font></p>
+
+<p><img src = 'assets/img/Taiwan-R-logo.png' height='40%' width='40%'></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-5" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>The Reasons</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><font size = "6">
+<strong>2. Everyone wants to be cool.</strong>
+</font></p>
+
+<p><img src="assets/img/cool_hacker.jpg" height="60%" width="60%" />
+<br>
+<a href="http://www.teachprivacy.com/category/phishing/">圖片來源</a></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-6" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>The Reasons</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><font size = "6">
+<code>Again, by a simple logic, everyone should learn R!</code>
+</font></p>
+
+<p><img src = 'assets/img/Taiwan-R-logo.png' height='40%' width='40%'></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="segue" id="slide-7" style="background:navy; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Our Gaol Today.</h2>
@@ -90,13 +156,34 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-4" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-8" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Mini Project: Barnsley Fern Fractal</h2>
   </hgroup>
   <article data-timings="">
-    <p><img src="assets/img/Barnsley.gif" height="60%" width="60%" /></p>
+    <p><font size = '6'>
+Work this cool picture out.
+</font></p>
+
+<p><img src="assets/img/Barnsley.gif" height="70%" width="70%" /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-9" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Mini Project: Barnsley Fern Fractal</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><font size = '6'>
+Work this cool picture out. <br>
+And you can claim that you can do sketch by a computer!
+</font></p>
+
+<p><img src="assets/img/Barnsley.gif" height="70%" width="70%" /></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -114,20 +201,50 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='My Reason'>
+        data-slide=2 title='The Reasons'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Our Gaol Today.'>
+        data-slide=3 title='The Reasons'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Mini Project: Barnsley Fern Fractal'>
+        data-slide=4 title='The Reasons'>
          4
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=5 title='The Reasons'>
+         5
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=6 title='The Reasons'>
+         6
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=7 title='Our Gaol Today.'>
+         7
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=8 title='Mini Project: Barnsley Fern Fractal'>
+         8
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=9 title='Mini Project: Barnsley Fern Fractal'>
+         9
       </a>
     </li>
   </ul>
