--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Coding in R looks like this:
 <slide class="segue" id="slide-7" style="background:navy; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>Our Gaol Today.</h2>
+    <h2>Our Gaol Today: Become a Cool Guy!</h2>
   </hgroup>
   <article data-timings="">
     
@@ -231,7 +231,7 @@ And you can claim that you can do sketch by a computer!
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='Our Gaol Today.'>
+        data-slide=7 title='Our Gaol Today: Become a Cool Guy!'>
          7
       </a>
     </li>
