--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
   </hgroup>
   <article data-timings="">
     <p><font size='5'>
-<code>Magic Vector: c(-0.04625854, 0.5211828, -1.003045, -0.4641298)</code>
+<code>Magic Vector:</code> <br>
+<code>c(1.45284450 ,-0.04625854, 0.5211828, -1.003045, -0.4641298)</code>
 </font></p>
 
   </article>
@@ -502,7 +503,8 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
   </hgroup>
   <article data-timings="">
     <p><font size='5'>
-<code>Magic Vector: c(-0.04625854, 0.5211828, -1.003045, -0.4641298)</code><br>
+<code>Magic Vector:</code> <br>
+<code>c(1.45284450, -0.04625854, 0.5211828, -1.003045, -0.4641298)</code><br>
 </font></p>
 
 <p>(暫時)不要問我怎麼把這個向量生出來的。(汗)</p>
@@ -518,7 +520,8 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
   </hgroup>
   <article data-timings="">
     <p><font size='5'>
-<code>Magic Vector: c(-0.04625854, 0.5211828, -1.003045, -0.4641298)</code><br>
+<code>Magic Vector:</code> <br> 
+<code>c(1.45284450, -0.04625854, 0.5211828, -1.003045, -0.4641298)</code><br>
 </font></p>
 
 <p>或許你可以問助教，助教都比我厲害。</p>
@@ -550,9 +553,9 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
   </hgroup>
   <article data-timings="">
     <ol class = "build incremental">
-<li>寫個 if 迴圈計算 X1 中某一筆資料與 magic vector 內積的結果。<br> (sum(X1[i, ] * magic_vec))</li>
-<li>如果內積值大於或等於 -1，print(&#39;setosa&#39;);反之，print(&#39;versicolor&#39;)</li>
-<li>跟 y1 比對一下，有何發現？</li>
+<li>寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> (sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數)</li>
+<li>如果內積值大於或等於 0，print(&#39;setosa&#39;);反之，print(&#39;versicolor&#39;)</li>
+<li>跟 y1[i] 比對一下，有何發現？</li>
 </ol>
 
   </article>
@@ -590,7 +593,7 @@ final_result &lt;- 0
 for (i in 1:10){
         final_result &lt;- final_result + i
 }
-(final_result)
+final_result
 </code></pre>
 
 <pre><code>## [1] 55
@@ -642,8 +645,7 @@ vec2 &lt;- c(&#39;a&#39;, &#39;b&#39;, &#39;c&#39;)
 <li><p>Named Vector:</p></li>
 </ul>
 
-<pre><code class="r">Bob &lt;- c(age = 27, height = 187, weight = 80)
-Bob
+<pre><code class="r">(Bob &lt;- c(age = 27, height = 187, weight = 80))
 </code></pre>
 
 <pre><code>##    age height weight 
@@ -749,8 +751,13 @@ vec1[1] + vec2[3]
     <h2>Examples (Cont.)</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">names(Bob)
+    <pre><code class="r">Bob
+names(Bob)
 Bob[&#39;age&#39;]   # reference by name.
+</code></pre>
+
+<pre><code>##    age height weight 
+##     27    187     80
 </code></pre>
 
 <pre><code>## [1] &quot;age&quot;    &quot;height&quot; &quot;weight&quot;
@@ -840,7 +847,7 @@ Bob[&#39;age&#39;]   # reference by name.
   </hgroup>
   <article data-timings="">
     <pre><code class="r">Bob &lt;- list(age=27, weight = 80,
-            favorite_data_name = &#39;iris&#39;, favorite_data = iris)
+            favorite_data_name = &#39;iris&#39;, favorite_data = head(iris))
 (age1 &lt;- Bob[1])
 class(age1)
 (age2 &lt;- Bob[[1]])
@@ -871,7 +878,7 @@ class(age2)
   </hgroup>
   <article data-timings="">
     <pre><code class="r">(Age_and_DataName &lt;- Bob[c(1, 3)])
-head(Bob[[&#39;favorite_data&#39;]])
+Bob[[&#39;favorite_data&#39;]]
 </code></pre>
 
 <pre><code>## $age
@@ -900,23 +907,21 @@ head(Bob[[&#39;favorite_data&#39;]])
     <h2>Play With List</h2>
   </hgroup>
   <article data-timings="">
-    <h3><code>Warmup for Battleship Mini Project: Drawing the Map</code></h3>
-
-<pre><code class="r">map =list(c(&#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;),
-          c(&#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;),
-          c(&#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;),
-          c(&#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;),
-          c(&#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;, &#39;O&#39;))
-for (i in 1:length(map)){
-        print(map[[i]])
+    <pre><code class="r">for (Attribute in Bob){
+        print(Attribute)
 }
 </code></pre>
 
-<pre><code>## [1] &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot;
-## [1] &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot;
-## [1] &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot;
-## [1] &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot;
-## [1] &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot; &quot;O&quot;
+<pre><code>## [1] 27
+## [1] 80
+## [1] &quot;iris&quot;
+##   Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+## 1          5.1         3.5          1.4         0.2  setosa
+## 2          4.9         3.0          1.4         0.2  setosa
+## 3          4.7         3.2          1.3         0.2  setosa
+## 4          4.6         3.1          1.5         0.2  setosa
+## 5          5.0         3.6          1.4         0.2  setosa
+## 6          5.4         3.9          1.7         0.4  setosa
 </code></pre>
 
   </article>
@@ -1292,7 +1297,7 @@ head(iris6)
 
 <p><code>之後會在 ETL 課程再度碰到它，也會學到進階的資料處理技巧。</code></p>
 
-<p>到<a href="https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv">這裡</a>下載檔案。(cl_info_other.csv)</p>
+<p>到<a href="https://dl.dropboxusercontent.com/u/5487490/MLDM%20Monday/RBasic/cl_info_other.csv">這裡</a>下載檔案。(cl_info_other.csv)</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -1356,7 +1361,55 @@ DF &lt;- read.table(&#39;cl_info_other.csv&#39;, sep = &#39;,&#39;,
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="segue" id="slide-63" style="background:green; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-63" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Exercises:</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>顯示 DF 前 20 筆資料與所有欄位的名稱。</li>
+<li>將 mortgage_cnt &lt; 2053 的資料另外儲存成 banks_below。</li>
+<li>將 mortgage_cnt &gt;= 22538 的資料另外儲存成 banks_above。</li>
+<li>將 banks_below 與 banks_above 合併成 DF2。</li>
+<li>將 DF2 先依 mortgage_cnt 再依 mortgage_bal 排序。(Hint: order) </li>
+</ol>
+
+<p><br></p>
+
+<p><font size='6'>
+<code>學員OS: 這作業實在太 trivial 了，簡直侮辱我的智慧。</code>
+</font></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-64" style="background:; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>Exercises:</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>顯示 DF 前 20 筆資料與所有欄位的名稱。</li>
+<li>將 mortgage_cnt &lt; 2053 的資料另外儲存成 banks_below。</li>
+<li>將 mortgage_cnt &gt;= 22538 的資料另外儲存成 banks_above。</li>
+<li>將 banks_below 與 banks_above 合併成 DF2。</li>
+<li>將 DF2 先依 mortgage_cnt 再依 mortgage_bal 排序。(Hint: order) </li>
+</ol>
+
+<p><br></p>
+
+<p><font size='6'>
+<code>接下來的 ETL 課程保證會滿足你的渴望!</code>
+</font></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="segue" id="slide-65" style="background:green; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Matrix</h2>
@@ -1367,7 +1420,7 @@ DF &lt;- read.table(&#39;cl_info_other.csv&#39;, sep = &#39;,&#39;,
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-64" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-66" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Matrix</h2>
@@ -1398,7 +1451,7 @@ My_matrix2
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-65" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-67" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Basic Operations on Matrix</h2>
@@ -1427,7 +1480,7 @@ My_matrix1 * My_matrix2
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-66" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-68" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Basic Operation on Matrix (Cont.)</h2>
@@ -1451,7 +1504,7 @@ My_matrix1 * My_matrix2
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-67" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-69" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Basic Operation on Matrix (Cont.)</h2>
@@ -1482,7 +1535,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-68" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-70" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Basic Operation on Matrix (Cont.)</h2>
@@ -1511,7 +1564,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-69" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-71" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Basic Operation on Matrix (Cont.)</h2>
@@ -1532,7 +1585,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-70" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-72" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Basic Operation on Matrix (Cont.)</h2>
@@ -1557,7 +1610,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="segue" id="slide-71" style="background:navy; background-repeat:no-repeat; background-position:center; ">
+<slide class="segue" id="slide-73" style="background:navy; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Mini Project 1: Barnsley Fern Fractal</h2>
@@ -1568,7 +1621,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-72" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-74" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Mini Project 1: Barnsley Fern Fractal</h2>
@@ -1591,7 +1644,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-73" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-75" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Barnsley Fern Fractal</h2>
@@ -1609,7 +1662,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-74" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-76" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Barnsley Fern Fractal: Tips</h2>
@@ -1625,7 +1678,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-75" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-77" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Barnsley Fern Fractal: Tips</h2>
@@ -1648,7 +1701,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-76" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-78" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Barnsley Fern Fractal: Tips</h2>
@@ -1672,7 +1725,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="segue" id="slide-77" style="background:green; background-repeat:no-repeat; background-position:center; ">
+<slide class="segue" id="slide-79" style="background:green; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>One Last Thing: Help Yourself by Yourself</h2>
@@ -1683,7 +1736,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-78" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-80" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Why?</h2>
@@ -1699,7 +1752,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-79" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-81" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>But How?</h2>
@@ -1715,7 +1768,7 @@ My_matrix1 %*% my_vec
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="segue" id="slide-80" style="background:orange; background-repeat:no-repeat; background-position:center; ">
+<slide class="segue" id="slide-82" style="background:orange; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>Thanks for Your Attention!</h2>
@@ -2104,31 +2157,31 @@ My_matrix1 %*% my_vec
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=63 title='Matrix'>
+        data-slide=63 title='Exercises:'>
          63
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=64 title='Matrix'>
+        data-slide=64 title='Exercises:'>
          64
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=65 title='Basic Operations on Matrix'>
+        data-slide=65 title='Matrix'>
          65
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=66 title='Basic Operation on Matrix (Cont.)'>
+        data-slide=66 title='Matrix'>
          66
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=67 title='Basic Operation on Matrix (Cont.)'>
+        data-slide=67 title='Basic Operations on Matrix'>
          67
       </a>
     </li>
@@ -2152,31 +2205,31 @@ My_matrix1 %*% my_vec
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=71 title='Mini Project 1: Barnsley Fern Fractal'>
+        data-slide=71 title='Basic Operation on Matrix (Cont.)'>
          71
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=72 title='Mini Project 1: Barnsley Fern Fractal'>
+        data-slide=72 title='Basic Operation on Matrix (Cont.)'>
          72
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=73 title='Barnsley Fern Fractal'>
+        data-slide=73 title='Mini Project 1: Barnsley Fern Fractal'>
          73
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=74 title='Barnsley Fern Fractal: Tips'>
+        data-slide=74 title='Mini Project 1: Barnsley Fern Fractal'>
          74
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=75 title='Barnsley Fern Fractal: Tips'>
+        data-slide=75 title='Barnsley Fern Fractal'>
          75
       </a>
     </li>
@@ -2188,26 +2241,38 @@ My_matrix1 %*% my_vec
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=77 title='One Last Thing: Help Yourself by Yourself'>
+        data-slide=77 title='Barnsley Fern Fractal: Tips'>
          77
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=78 title='Why?'>
+        data-slide=78 title='Barnsley Fern Fractal: Tips'>
          78
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=79 title='But How?'>
+        data-slide=79 title='One Last Thing: Help Yourself by Yourself'>
          79
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=80 title='Thanks for Your Attention!'>
+        data-slide=80 title='Why?'>
          80
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=81 title='But How?'>
+         81
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=82 title='Thanks for Your Attention!'>
+         82
       </a>
     </li>
   </ul>
