--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ mix_vec2 &lt;- c(2, T)
 
 <ul>
 <li>語法: <strong>length(my_vec)</strong></li>
-<li>傳回 my_vect 的長度</li>
+<li>傳回 my_vec 的長度</li>
 </ul></li>
 <li>+, -, *, /:
 
