--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Coding in R looks like this:
   </hgroup>
   <article data-timings="">
     <p><font size = "6">
-<strong>2. Everyone wants to be cool.</strong>
+<strong>2. Everyone wants to be a cool guy.</strong>
 </font></p>
 
 <p><img src="assets/img/cool_hacker.jpg" height="60%" width="60%" />
