--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
 <code>c(1.45284450, -0.04625854, 0.5211828, -1.003045, -0.4641298)</code><br>
 </font></p>
 
-<p>或許你可以問助教，助教都比我厲害。</p>
+<p>或許你可以問助教，助教什麼都會!</p>
 
   </article>
   <!-- Presenter Notes -->
