--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
     <ol>
 <li>寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> (sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數)</li>
 <li>如果內積值大於或等於 0，print(&#39;setosa&#39;);反之，print(&#39;versicolor&#39;)</li>
-<li>跟 y1[i] 比對一下，有何發現？</li>
+<li>執行 print(y1[i])，有何發現？</li>
 </ol>
 
 <p><br>
