--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ final_result
   </hgroup>
   <article data-timings="">
     <ol class = "build incremental">
-<li>寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> (sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數)</li>
+<li>寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> <strong>(</strong> sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數 <strong>)</strong></li>
 <li>如果內積值大於或等於 0，print(&#39;setosa&#39;);反之，print(&#39;versicolor&#39;)</li>
 <li>執行 print(y1[i])，有何發現？</li>
 </ol>
@@ -631,7 +631,7 @@ final_result
   </hgroup>
   <article data-timings="">
     <ol>
-<li>寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> (sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數)</li>
+<li>寫個 if 迴圈計算 X1 中某一筆資料與 magic_vector 內積的結果。<br> <strong>(</strong> sum(X1[i, ] * magic_vec), i 可以是1~100任何一個整數 <strong>)</strong></li>
 <li>如果內積值大於或等於 0，print(&#39;setosa&#39;);反之，print(&#39;versicolor&#39;)</li>
 <li>執行 print(y1[i])，有何發現？</li>
 </ol>
