--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ a == NA     # 要用 is.na(a) 才會回傳 TRUE。(另外還有 is.nan)
 <li>sum(ind) </li>
 </ol>
 
-<p><code>猜猜看答案會是多少? (sum 是 R 中的內建函式，用以求和。)</code>
+<p><code>猜猜看答案會是多少? (sum 是 R 中的內建函式，用以求和。)</code> <br>
 <code>順便看看 ind 長啥樣子吧!</code></p>
 
   </article>
