--- a/index.html
+++ b/index.html
@@ -303,7 +303,10 @@ And you can claim that you can do sketch by a computer!
 <li>Data Visulization</li>
 </ul>
 
-<p><code>在今天的課程裡也會讓大家體會一下每個課程的主題是什麼。</code></p>
+<p><br>
+<font size='6'>
+<code>在今天的課程裡也會讓大家體會一下每個課程的主題是什麼。</code>
+</font></p>
 
   </article>
   <!-- Presenter Notes -->
