--- a/index.html
+++ b/index.html
@@ -611,7 +611,8 @@ final_result
   <article data-timings="">
     <pre><code>    # 讓 R 幫你驅邪避凶!!
     for (i in 1:10){
-            system(&quot;say &#39;Nan Wu Ah Mi Tow Fo&#39;&quot;)
+            system(&quot;say &#39;Nann Moll Ah Mi Tow Fo&#39;&quot;)
+            system(&quot;say &#39;Ah Men&#39;&quot;)
     }
 </code></pre>
 
