--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <slide class="" id="slide-2" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>Topics We Will Cover Today</h2>
+    <h2>Why Not R?</h2>
   </hgroup>
   <article data-timings="">
     
@@ -2314,7 +2314,7 @@ My_matrix1 %*% my_vec
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Topics We Will Cover Today'>
+        data-slide=2 title='Why Not R?'>
          2
       </a>
     </li>
