Data Structure completed: typo fixed.

--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@ Dboy[ind]
 <slide class="" id="slide-75" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>Merging: rsbind</h2>
+    <h2>Merging: rbind</h2>
   </hgroup>
   <article data-timings="">
     <ul>
@@ -1585,7 +1585,7 @@ iris[1:3, ]
 <slide class="" id="slide-77" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>Merging: cbind</h2>
+    <h2>Merging: rbind</h2>
   </hgroup>
   <article data-timings="">
     <p><code>Syntax: rbind(A, B) where A and B are two data frames or matrices</code></p>
@@ -1716,7 +1716,7 @@ iris[1:3, ]
     <h2>Merging: cbind</h2>
   </hgroup>
   <article data-timings="">
-    <p><code>Syntax: rbind(A, B) where A and B are two data frames or matrices</code></p>
+    <p><code>Syntax: cbind(A, B) where A and B are two data frames or matrices</code></p>
 
 <p>Our beloved iris data set.</p>
 
@@ -3529,7 +3529,7 @@ My_matrix1 %*% my_vec
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=75 title='Merging: rsbind'>
+        data-slide=75 title='Merging: rbind'>
          75
       </a>
     </li>
@@ -3541,7 +3541,7 @@ My_matrix1 %*% my_vec
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=77 title='Merging: cbind'>
+        data-slide=77 title='Merging: rbind'>
          77
       </a>
     </li>
